[gd_scene load_steps=17 format=3 uid="uid://dlu8c8hg356ry"]

[ext_resource type="Script" path="res://Scripts/Receptionist.gd" id="1_awdhf"]
[ext_resource type="FontFile" uid="uid://yx8eo66u0ce3" path="res://pixel-comic-sans-undertale-sans-font.ttf" id="2_j6ool"]
[ext_resource type="Texture2D" uid="uid://c2w3yds4pn4qv" path="res://Art/rece_bg.png" id="2_utck8"]
[ext_resource type="Texture2D" uid="uid://dn0kg7pour2nt" path="res://Art/button_att.png" id="3_3jl6n"]
[ext_resource type="Texture2D" uid="uid://ba47r5064emde" path="res://Art/receptionist.png" id="3_pdxj6"]
[ext_resource type="Texture2D" uid="uid://bp00625gpgq8a" path="res://Art/button_mag.png" id="4_r13mq"]
[ext_resource type="Texture2D" uid="uid://bevfmmcra5nck" path="res://Art/button_hea.png" id="5_50sxo"]
[ext_resource type="Texture2D" uid="uid://b251cv06squc4" path="res://Art/button_thr.png" id="6_cwilp"]
[ext_resource type="Texture2D" uid="uid://bqcm8ibb1iyi0" path="res://Art/button_run.png" id="6_lycmj"]
[ext_resource type="Texture2D" uid="uid://qm30p4vxdxbn" path="res://Art/placeholder_student_battleicon.png" id="7_lmg6l"]
[ext_resource type="Texture2D" uid="uid://2eotmj1n7h24" path="res://Art/button_sma.png" id="7_q78a0"]
[ext_resource type="Texture2D" uid="uid://ddemsdbmlqxnd" path="res://Art/back.png" id="9_jj1om"]
[ext_resource type="Texture2D" uid="uid://bqdyp38w5mcqg" path="res://Art/gui_health.png" id="12_0y3op"]
[ext_resource type="Texture2D" uid="uid://dpevno03iqvuo" path="res://Art/gui_mana.png" id="13_spqrl"]
[ext_resource type="Texture2D" uid="uid://bi2hiv412o068" path="res://Art/gui_textbox.png" id="14_vcfmr"]
[ext_resource type="AudioStream" uid="uid://b350qguim6k" path="res://Music/receptionist_theme.mp3" id="16_xod17"]

[node name="Node2" type="Node"]
script = ExtResource("1_awdhf")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_utck8")

[node name="Receptionist" type="TextureRect" parent="."]
offset_left = 497.0
offset_top = 4.0
offset_right = 1265.0
offset_bottom = 1028.0
texture = ExtResource("3_pdxj6")
stretch_mode = 4

[node name="EnemyDisplay" type="Label" parent="."]
offset_left = 737.0
offset_top = 26.0
offset_right = 1145.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_j6ool")
theme_override_font_sizes/font_size = 76
text = "Wuhoh"

[node name="Health" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 805.0
offset_right = 246.0
offset_bottom = 917.0
texture = ExtResource("12_0y3op")
stretch_mode = 4

[node name="mana" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 931.0
offset_right = 246.0
offset_bottom = 1043.0
texture = ExtResource("13_spqrl")
stretch_mode = 4

[node name="Etextbox" type="TextureRect" parent="."]
offset_left = 1376.0
offset_top = 17.0
offset_right = 1895.0
offset_bottom = 787.0
texture = ExtResource("14_vcfmr")

[node name="Ptextbox" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 17.0
offset_right = 544.0
offset_bottom = 787.0
texture = ExtResource("14_vcfmr")

[node name="JohnACG" type="TextureRect" parent="."]
offset_left = 246.0
offset_top = 795.0
offset_right = 544.0
offset_bottom = 1076.0
texture = ExtResource("7_lmg6l")

[node name="Log" type="Label" parent="."]
offset_left = 54.0
offset_top = 44.0
offset_right = 509.0
offset_bottom = 753.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_j6ool")
theme_override_font_sizes/font_size = 50

[node name="ELog" type="Label" parent="."]
offset_left = 1402.0
offset_top = 45.0
offset_right = 1878.0
offset_bottom = 757.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_j6ool")
theme_override_font_sizes/font_size = 30

[node name="Mana" type="Label" parent="."]
offset_left = 150.0
offset_top = 960.0
offset_right = 207.0
offset_bottom = 1030.0
theme_override_fonts/font = ExtResource("2_j6ool")
theme_override_font_sizes/font_size = 60

[node name="HP" type="Label" parent="."]
offset_left = 140.0
offset_top = 840.0
offset_right = 223.0
offset_bottom = 888.0
theme_override_fonts/font = ExtResource("2_j6ool")
theme_override_font_sizes/font_size = 50

[node name="Attack" type="TextureButton" parent="."]
visible = false
offset_left = 361.0
offset_top = 667.0
offset_right = 1552.0
offset_bottom = 857.0
texture_normal = ExtResource("3_3jl6n")
stretch_mode = 5

[node name="Magic" type="TextureButton" parent="."]
visible = false
offset_left = 364.0
offset_top = 878.0
offset_right = 1549.0
offset_bottom = 1068.0
texture_normal = ExtResource("4_r13mq")
stretch_mode = 5

[node name="Heal" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 667.0
offset_right = 942.0
offset_bottom = 857.0
texture_normal = ExtResource("5_50sxo")
stretch_mode = 4

[node name="Sp1" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 667.0
offset_right = 1347.0
offset_bottom = 857.0
texture_normal = ExtResource("6_cwilp")
stretch_mode = 4

[node name="Sp2" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 878.0
offset_right = 942.0
offset_bottom = 1068.0
texture_normal = ExtResource("7_q78a0")
stretch_mode = 4

[node name="Back" type="TextureButton" parent="."]
visible = false
offset_left = 1181.0
offset_top = 878.0
offset_right = 1436.0
offset_bottom = 1068.0
texture_normal = ExtResource("9_jj1om")
stretch_mode = 4

[node name="Run" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 878.0
offset_right = 1193.0
offset_bottom = 1068.0
texture_normal = ExtResource("6_lycmj")
stretch_mode = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_xod17")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Sp1" to="." method="_on_sp_1_pressed"]
[connection signal="pressed" from="Sp2" to="." method="_on_sp_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
